feat: 계약서 필드값 초기화 API 구현